--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
           <div class="row">
               
           </div>
-          <a href="./报告.html" class="btn btn-dark btn-sm"><i class="fas fa-clone center"></i> 报告</a>
+          <a href="./baogao.html" class="btn btn-dark btn-sm"><i class="fas fa-clone center"></i> 报告</a>
           <!-- Grid row -->
 
         </div>
