--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
                 <!-- Card image -->
                 <div class="view view-cascade overlay">
-                  <img class="card-img-top" src="/files/weapon/aoquan.png"
+                  <img class="card-img-top" src="files/weapon/aoquan.png"
                     alt="Card image cap">
                   <a>
                     <div class="mask rgba-white-slight"></div>
